# localharness

./: .env.example  .gitattributes  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN_M5_PLUS.md  README.md  RELEASING.md  SECURITY.md  UPSTREAM.md  app.rl  bitmask.rl  console.rl  fleet-run-output.txt  fractal.rl  readyup.rl  vercel.json
.cargo/: config.toml
.claude/agents/: rust-api-ergonomics-reviewer.md  rust-code-reviewer.md
.github/workflows/: binaries.yml  ci.yml  ios-webkit-e2e.yml  release.yml
.kokoro/: requirements-build.txt
contracts/: .gitignore  CLAUDE.md  README.md  foundry.toml
contracts/archive/: README.md
contracts/script/: AddAdminReset.s.sol  AddBountyFacet.s.sol  AddCreditMeterFacet.s.sol  AddDeviceRegistryFacet.s.sol  AddErc721Facet.s.sol  AddErc721Fresh.s.sol  AddFeedbackClear.s.sol  AddFeedbackFacet.s.sol  AddGuildFacet.s.sol  AddInviteFacet.s.sol  AddMainIdentityFacet.s.sol  AddMessageFacet.s.sol  AddMintGateFacet.s.sol  AddPairingFacet.s.sol  AddPairingFacetV2.s.sol  AddPartyFacet.s.sol  AddPushFacet.s.sol  AddRedeemFacet.s.sol  AddRegistryNameValidation.s.sol  AddReleaseFacet.s.sol  AddReputationFacet.s.sol  AddScheduleFacet.s.sol  AddScheduleHardening.s.sol  AddScheduleLastRun.s.sol  AddSessionFacet.s.sol  AddSessionRoomFacet.s.sol  AddSignalingFacet.s.sol  AddSubscribeFacet.s.sol  AddTbaFacet.s.sol  AddTeamFacet.s.sol  AddTitheFacet.s.sol  AddValidationFacet.s.sol  AddVotingFacet.s.sol  AddWeightedVotingFacet.s.sol  AddWipeFacet.s.sol  AddX402Facet.s.sol  Deploy.s.sol  DeployBootstrapFaucet.s.sol  DeployCreditsFacet.s.sol  DeployDiamond.s.sol  (+16 more)
contracts/src/: Diamond.sol  LocalharnessCredits.sol  LocalharnessToken.sol
contracts/test/: BountyFacet.t.sol  BountyReclaimAdversarial.t.sol  CounterFacet.t.sol  CreditMeterFacet.t.sol  FinancialAdversarial.t.sol  GuardedDiamondCutFacet.t.sol  GuildFacet.t.sol  GuildRoleAdversarial.t.sol  IdentityAdversarial.t.sol  InviteFacet.t.sol  MessageFacet.t.sol  MintGateFacet.t.sol  MultiSignerAccount.t.sol  PartyFacet.t.sol  PushFacet.t.sol  RegistryNameValidation.t.sol  ReputationFacet.t.sol  ScheduleFacet.t.sol  ScheduleFacetAdversarial.t.sol  ScheduleHardeningAdversarial.t.sol  SessionRoomFacet.t.sol  SignalingAuth.t.sol  SubscribeFacet.t.sol  TeamFacet.t.sol  ValidationFacet.t.sol  ValidationResolverDisputant.t.sol  VotingFacet.t.sol  (+4 more)
design/: README.md  ab-testing.md  agenda.md  agent-coordination.md  agent-writes-rust.md  architecture-analysis.md  autonomous-loop.md  bashlite.md  beta-plan.md  big-picture-refactor-roadmap.md  browser-e2e-audit-2026-06-26.md  chain-coherence.md  cleanup-backlog.md  cli-mainnet-onboarding.md  cli-mainnet-relay.md  compatibility-ledger.md  concurrent-agent-worktrees.md  cross-platform-rust-architecture.md  custody-security.md  groupchat.md  host-compose.md  host-import-layer.md  invites.md  keeper.md  launch-1.0.md  main-identity.md  mainnet-deploy-runbook.md  metering-live-verification.md  metering.md  model-agnostic.md  money-review-coverage.md  mpp-credits-onramp.md  multiplayer-cartridges.md  offchain-scheduler.md  oggoel.md  paymaster.md  road-to-v1.0.md  security-audit-2026-06-17.md  security-audit-2026-06-26.md  shared-kv-session-rooms.md  (+6 more)
docs/: CHANGELOG-archive.md  SOP-QA-001-autonomous-feedback.md  SOP-doc-integrity.md  error-codes.md  feedback-resolved-mainnet.txt  feedback-resolved.txt
examples/: agent_with_tool.rs  autonomous_company.rs  basic_agent.rs  child_diamond_genesis.rs  create_subagent_live.rs  diamond_cut_e2e.rs  hooks_and_policies.rs  minimal_agent.rs  push_sub_live.rs  soliditylite_array_e2e.rs  soliditylite_counter_e2e.rs  soliditylite_counterfacet_e2e.rs  soliditylite_facet_e2e.rs  soliditylite_getter_live.rs  soliditylite_mapping_e2e.rs  soliditylite_mvp_capstone.rs  tempo_create_probe.rs  tempo_tx_live.rs  test_agent.rs  text_chat.rs  thought_signature_live.rs
localharness-web/: Cargo.toml
localharness-web/src/: lib.rs
proxy/: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
scripts/: CLAUDE.md  add-redeem-codes.sh  audit-tech-debt.sh  browser-smoke.md  build-web.ps1  build-web.sh  check-feedback.mjs  check-meter.mjs  clear-feedback.sh  crop-mobile-shot.ps1  gen-feedback-resolutions.mjs  gen-problems.mjs  gen-pwa-icons.mjs  harvest-feedback.ps1  harvest-feedback.sh  install.sh  issue-to-pr.sh  nostr-broadcast.mjs  nostr-seti.mjs  probe-gemini.ps1  release.ps1  release.sh  render-cartridge.js  render-compose.js  render-screenshots.mjs  shots.mjs  smoke-cli.sh  smoke-money.sh  smtp-send.mjs  sync-upstream.ps1  sync-upstream.sh  test-cartridges.mjs  test-compose-wiring.mjs  test-metering-usage.mjs  test-variable-resolution.mjs  test-worker-host-parity.mjs  validate-cartridge.js  verify-array-write.mjs  verify-codegen-valid.mjs  verify-e2e.sh  (+5 more)
src/: accounting.rs  agent.rs  agent_tools.rs  compose.rs  confirm.rs  content.rs  conversation.rs  cut_guard.rs  difficulty.rs  docs_manifest.rs  encoding.rs  error.rs  error_codes.rs  evm_tools.rs  hiring.rs  hooks.rs  html_fb.rs  keeper.rs  kv_reduce.rs  kv_room.rs  landing.rs  lessons.rs  lib.rs  plan.rs  policy.rs  proto.rs  push_enroll.rs  qr.rs  raster.rs  registry.rs  router.rs  runtime.rs  seed_flow.rs  sharedfs_reconcile.rs  signaling_seal.rs  simulation.rs  skills.rs  subdomain.rs  tempo_tx.rs  tool_params.rs  (+9 more)
templates/: art.sol
tests/: a11y_live_regions.rs  agent_tools_cover_builtins.rs  agents_claude_in_sync.rs  bashlite_sh.rs  chat_toolset_single_source.rs  css_mobile_overflow.rs  data_action_dispatch.rs  framebuffer_default_parity.rs  host_agent_cartridge.rs  host_compose_cartridge.rs  opfs_worker_parity.rs  readme_skill_in_sync.rs  seed_pull_boot_parity.rs  tool_hook_policy.rs  turn_hooks.rs  variable_resolution_cartridge.rs
web/: CLAUDE.md  boot.js  cartridge-worker.js  colony.html  feedback-resolutions.json  global-lessons.txt  index.html  llms.txt  manifest.webmanifest  opfs-worker.js  pay.html  pay.js  skill.md  stripe-embed.js  styles.css  sw.js  wasi-worker.js
(+521 files in other folders)
