[package]
name = "localharness"
version = "0.7.2"
edition = "2024"
license = "Apache-2.0"
description = "A Rust-native agent SDK for Gemini. Streaming, custom tools, safety policies, background triggers — zero external binaries."
repository = "https://github.com/compusophy/localharness"
documentation = "https://docs.rs/localharness"
readme = "README.md"
keywords = ["agent", "ai", "gemini", "llm", "sdk"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.85"
exclude = [
    "UPSTREAM.md",
    "DESIGN.md",
    "RELEASING.md",
    "CHANGELOG.md",
    "scripts/**",
    ".github/**",
    "web/**",
    "vercel.json",
    ".vercelignore",
    ".env",
    ".env.*",
    ".env.example",
    "CLAUDE.md",
]

[lib]
# `lib` (rlib) for native consumers (`cargo add localharness`);
# `cdylib` for wasm-pack builds when the browser-app is enabled.
# Native builds produce both; cdylib is a no-op without a wasm target.
crate-type = ["lib", "cdylib"]

[features]
default = ["native"]
# `native` enables the parts of the crate that require an OS: subprocess
# spawning (run_command, MCP stdio bridge), tokio multi-thread runtime,
# and the NativeFilesystem implementation (which the 6 fs builtins call
# into — without it, the builtins compile but don't register).
# wasm32 callers should depend with `default-features = false` to strip
# these and provide their own `Filesystem` impl (e.g. OPFS-backed).
native = [
    "dep:walkdir",
    "dep:tempfile",
    "tokio/rt-multi-thread",
    "tokio/process",
    "tokio/fs",
    "tokio/io-util",
]
# `browser-app` compiles the in-tab HTMX-style web IDE into the crate
# as a wasm cdylib. Off by default so library consumers don't pay for
# `maud` or DOM web-sys features. Enable it together with
# `--no-default-features --target wasm32-unknown-unknown` via wasm-pack
# to build the shipping browser bundle. Has no effect on a native build.
browser-app = ["dep:maud", "dep:console_error_panic_hook", "dep:pulldown-cmark"]

[dependencies]
tokio = { version = "1.42", default-features = false, features = [
    "macros",
    "sync",
    "time",
    "rt",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
futures-core = "0.3"
thiserror = "1"
tracing = "0.1"
bytes = "1"
parking_lot = "0.12"
dunce = "1.0"
arc-swap = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
walkdir = { version = "2", optional = true }
globset = "0.4"
regex = "1"
tempfile = { version = "3", optional = true }
# UI-only; pulled in only when --features browser-app is set. Maud is a
# proc-macro that compiles HTML templates to string-builders — no runtime
# framework, no vdom. Compiles on every target; only used by src/app/.
maud = { version = "0.26", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
# Markdown rendering for assistant text in the browser app. No syntax
# highlighting, no html-on-the-wire: we hand pulldown-cmark a string,
# get HTML back, swap it into the segment via maud's PreEscaped.
pulldown-cmark = { version = "0.10", optional = true, default-features = false, features = ["html"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    # Used by OpfsFilesystem
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemRemoveOptions",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
    "Window",
    "WorkerGlobalScope",
    # Used by src/app/ (browser-app feature). Cheap to include
    # unconditionally — web-sys feature flags only affect symbol
    # visibility, not compiled code size.
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlDetailsElement",
    "Event",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "InputEvent",
    "Location",
    "Storage",
    "console",
] }

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "smoke"
path = "examples/test_agent.rs"

[[example]]
name = "text_chat"
path = "examples/text_chat.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# wasm-pack runs an old `wasm-opt` that rejects post-MVP features the
# current rustc target emits (bulk-memory, nontrapping-fptoint, …). The
# rustc-generated bundle is already well-optimised; skipping wasm-opt
# costs ~10-20% binary size in exchange for a build that doesn't depend
# on a moving toolchain target.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
