[package]
name = "localharness"
version = "0.20.0"
edition = "2024"
license = "Apache-2.0"
description = "A Rust-native agent SDK for Gemini. Streaming, custom tools, safety policies, background triggers — zero external binaries."
repository = "https://github.com/compusophy/localharness"
documentation = "https://docs.rs/localharness"
readme = "README.md"
keywords = ["agent", "ai", "gemini", "llm", "sdk"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.85"
exclude = [
    "RELEASING.md",
    "CHANGELOG.md",
    "scripts/**",
    ".github/**",
    "web/**",
    "contracts/**",
    "vercel.json",
    ".vercelignore",
    ".env",
    ".env.*",
    ".env.example",
    "CLAUDE.md",
]

[lib]
# `lib` (rlib) for native consumers (`cargo add localharness`);
# `cdylib` for wasm-pack builds when the browser-app is enabled.
# Native builds produce both; cdylib is a no-op without a wasm target.
crate-type = ["lib", "cdylib"]

[features]
default = ["native"]
# `native` enables the parts of the crate that require an OS: subprocess
# spawning (run_command, MCP stdio bridge), tokio multi-thread runtime,
# and the NativeFilesystem implementation (which the 6 fs builtins call
# into — without it, the builtins compile but don't register).
# wasm32 callers should depend with `default-features = false` to strip
# these and provide their own `Filesystem` impl (e.g. OPFS-backed).
native = [
    "dep:walkdir",
    "dep:tempfile",
    "tokio/rt-multi-thread",
    "tokio/process",
    "tokio/fs",
    "tokio/io-util",
]
# `browser-app` compiles the in-tab HTMX-style web IDE into the crate
# as a wasm cdylib. Off by default so library consumers don't pay for
# `maud` or DOM web-sys features. Enable it together with
# `--no-default-features --target wasm32-unknown-unknown` via wasm-pack
# to build the shipping browser bundle. Has no effect on a native build.
browser-app = ["dep:maud", "dep:console_error_panic_hook", "dep:pulldown-cmark", "dep:qrcode", "wallet"]
# `wallet` is the M6 in-browser keypair. Uses k256 + sha3 directly
# rather than alloy's split crates — alloy's TransactionEnvelope
# proc-macro currently trips on `serde::__private` symbol resolution
# (1.0.22 vs serde 1.0.228), and we don't need EIP-1559 envelope
# encoding for an identity wallet. k256 alone is wasm-clean and
# what alloy uses under the hood anyway. bip39 gives us the
# 12-word seed phrase for human-friendly backup.
wallet = ["dep:k256", "dep:sha3", "dep:rand_core", "dep:bip39", "dep:zeroize"]

[dependencies]
tokio = { version = "1.42", default-features = false, features = [
    "macros",
    "sync",
    "time",
    "rt",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
futures-core = "0.3"
thiserror = "1"
tracing = "0.1"
bytes = "1"
parking_lot = "0.12"
dunce = "1.0"
arc-swap = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
walkdir = { version = "2", optional = true }
globset = "0.4"
regex = "1"
tempfile = { version = "3", optional = true }
# UI-only; pulled in only when --features browser-app is set. Maud is a
# proc-macro that compiles HTML templates to string-builders — no runtime
# framework, no vdom. Compiles on every target; only used by src/app/.
maud = { version = "0.26", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
# Markdown rendering for assistant text in the browser app. No syntax
# highlighting, no html-on-the-wire: we hand pulldown-cmark a string,
# get HTML back, swap it into the segment via maud's PreEscaped.
pulldown-cmark = { version = "0.10", optional = true, default-features = false, features = ["html"] }
# QR code for the device-pairing deep link. svg-only (NO `image`/`pic`
# default features) so it pulls ZERO transitive deps and stays wasm-clean —
# we render an inline SVG string and inject it via maud `PreEscaped`. UI-only;
# enabled solely by the browser-app feature.
qrcode = { version = "0.14", optional = true, default-features = false, features = ["svg"] }
# In-browser wallet primitives (M6 spike).
# k256: secp256k1 keypair + sign. ecdsa + arithmetic features are
# the minimum for "generate, sign, verify" without dragging in
# elliptic-curve traits we don't use.
# sha3: keccak256 for Ethereum address derivation
#   (last 20 bytes of keccak256(uncompressed_pubkey[1..])).
# rand_core: trait used by k256's `random()`; wasm gets entropy via
# our existing getrandom/js feature.
k256 = { version = "0.13", optional = true, default-features = false, features = ["ecdsa", "arithmetic", "ecdh", "std"] }
sha3 = { version = "0.10", optional = true, default-features = false }
rand_core = { version = "0.6", optional = true, default-features = false, features = ["getrandom"] }
bip39 = { version = "2", optional = true, default-features = false, features = ["std", "rand"] }
# zeroize: wipe secret-derived material (private-key hex, BIP-39 entropy,
# the keccak digest) from memory on drop. The crate's own threat model is
# "same-origin memory is reachable after a compromise", so don't leave
# long-lived plaintext key copies in freed heap. Already in the tree via
# k256/elliptic-curve; pinned here as a direct dep so we can derive on our
# own types.
zeroize = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    # Used by OpfsFilesystem
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemRemoveOptions",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
    "Window",
    "WorkerGlobalScope",
    # Used by src/app/ (browser-app feature). Cheap to include
    # unconditionally — web-sys feature flags only affect symbol
    # visibility, not compiled code size.
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlDetailsElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "DomRect",
    "Event",
    "EventTarget",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "KeyboardEvent",
    "InputEvent",
    "MessageEvent",
    # host_net: WebSocket-backed cartridge networking (src/rustlite/loader.rs
    # + src/app/display.rs). BinaryType selects arraybuffer framing.
    "WebSocket",
    "BinaryType",
    "History",
    "Location",
    "Storage",
    "HtmlIFrameElement",
    "NodeList",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "AesGcmParams",
    "console",
] }

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "test-util"] }

# Live-only Tempo Moderato harness. Depends on the `wallet` feature
# (k256 + sha3 + registry/tempo_tx/wallet modules) and an `EVM_PRIVATE_KEY`
# env var. Gated so a default `cargo test` doesn't try to compile it
# without the feature wired up.
[[example]]
name = "tempo_tx_live"
required-features = ["wallet"]

# E2E: create a real agent subdomain on live Moderato via the sponsored
# registry path (the browser's create_subdomain). Writes to testnet.
[[example]]
name = "create_subagent_live"
required-features = ["wallet"]

# Agent-onboarding CLI: `localharness create <name>` / `call` / `whoami`.
# The harness-agnostic, server-free way for any agent to join the network.
# Needs `wallet` (registry + tempo signing); native (default) supplies tokio.
[[bin]]
name = "localharness"
# native (tokio/reqwest) + wallet (registry/tempo signing). Both gate it
# OFF under the wasm/browser-app build, where a native CLI can't compile.
required-features = ["wallet", "native"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# wasm-pack runs an old `wasm-opt` that rejects post-MVP features the
# current rustc target emits (bulk-memory, nontrapping-fptoint, …). The
# rustc-generated bundle is already well-optimised; skipping wasm-opt
# costs ~10-20% binary size in exchange for a build that doesn't depend
# on a moving toolchain target.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
