[package]
name = "localharness"
version = "0.60.13"
edition = "2024"
license = "Apache-2.0"
description = "Agents that own themselves: one Rust crate that's both an agent SDK (streaming, tools, hooks, policies, triggers, MCP) and a wallet-owning, self-sovereign agent that runs in the browser."
repository = "https://github.com/compusophy/localharness"
documentation = "https://docs.rs/localharness"
readme = "README.md"
keywords = ["agent", "ai", "gemini", "llm", "sdk"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.85"
exclude = [
    "RELEASING.md",
    "CHANGELOG.md",
    "scripts/**",
    ".github/**",
    "web/**",
    "contracts/**",
    "design/**",
    "proxy/**",
    # docs/error-codes.md stays packaged: the `index_doc_lists_every_code`
    # lib test reads it via CARGO_MANIFEST_DIR at test runtime.
    "docs/SOP-QA-001-autonomous-feedback.md",
    "docs/TESTING-0.24.0.md",
    "docs/feedback-resolved*.txt",
    "vercel.json",
    ".vercelignore",
    ".env",
    ".env.*",
    ".env.example",
    "CLAUDE.md",
]

[lib]
# `lib` (rlib) for native consumers (`cargo add localharness`);
# `cdylib` for wasm-pack builds when the browser-app is enabled.
# Native builds produce both; cdylib is a no-op without a wasm target.
crate-type = ["lib", "cdylib"]

[features]
default = ["native"]
# `native` enables the parts of the crate that require an OS: subprocess
# spawning (run_command, MCP stdio bridge), tokio multi-thread runtime,
# and the NativeFilesystem implementation (which the 6 fs builtins call
# into — without it, the builtins compile but don't register).
# wasm32 callers should depend with `default-features = false` to strip
# these and provide their own `Filesystem` impl (e.g. OPFS-backed).
native = [
    "dep:walkdir",
    "dep:tempfile",
    "tokio/rt-multi-thread",
    "tokio/process",
    "tokio/fs",
    "tokio/io-util",
    "tokio/io-std",
]
# `browser-app` compiles the in-tab HTMX-style web IDE into the crate
# as a wasm cdylib. Off by default so library consumers don't pay for
# `maud` or DOM web-sys features. Enable it together with
# `--no-default-features --target wasm32-unknown-unknown` via wasm-pack
# to build the shipping browser bundle. Has no effect on a native build.
browser-app = ["dep:maud", "dep:console_error_panic_hook", "dep:pulldown-cmark", "dep:qrcode", "wallet", "anthropic", "openai"]
# `wallet` is the M6 in-browser keypair. Uses k256 + sha3 directly
# rather than alloy's split crates — alloy's TransactionEnvelope
# proc-macro currently trips on `serde::__private` symbol resolution
# (1.0.22 vs serde 1.0.228), and we don't need EIP-1559 envelope
# encoding for an identity wallet. k256 alone is wasm-clean and
# what alloy uses under the hood anyway. bip39 gives us the
# 12-word seed phrase for human-friendly backup.
wallet = ["dep:k256", "dep:sha3", "dep:rand_core", "dep:bip39", "dep:zeroize"]
# `anthropic` compiles the second LLM backend (`src/backends/anthropic/`):
# the Claude Messages API as a `ConnectionStrategy`. Purely additive — off
# by default, pulls no new dependencies (reuses reqwest/serde/futures), and
# does not touch the default build or the Gemini backend. BYOK only here;
# the credit-proxy/credits routing is Phase C (out of scope).
anthropic = []
# `mainnet` flips `registry::chain::ACTIVE` from Moderato testnet to Tempo
# mainnet (chain 4217). Default OFF = byte-for-byte testnet. Do NOT ship until
# the mainnet diamond/$LH/fee-token addresses are filled in (chain.rs MAINNET
# placeholders are empty on purpose — see design/stripe-mainnet.md step 12).
mainnet = []
# `openai` compiles the OpenAI Chat Completions backend
# (`src/backends/openai/`): `POST /v1/chat/completions` as a
# `ConnectionStrategy`. Purely additive — off by default, pulls no new deps
# (reuses reqwest/serde/futures), and leaves the default build + the Gemini
# backend untouched. BYOK (`Agent::start_openai`) or platform `$LH` via the
# proxy base-url override (the proxy already forwards `/v1/chat/completions`).
openai = []
# `local` compiles the in-browser local-model backend (`src/backends/local/`):
# Gemma 3 270M running fully in the tab via Burn's wgpu/WebGPU backend (no
# proxy, no `$LH`, no API key). UNLIKE `anthropic` this is HEAVY — it pulls the
# Burn tensor framework. Off by default; enabled together with `browser-app`
# for the in-tab inference path. The wgpu backend targets WebGPU on wasm32 and
# Vulkan/Metal/DX12 on native (so the model can be validated on native first).
local = ["dep:burn", "dep:burn-store", "dep:tokenizers", "dep:getrandom_v04"]
# `browser-app-local` ships the browser IDE WITH the in-tab Gemma backend
# enabled — the opt-in heavy bundle. Kept SEPARATE from `browser-app` so the
# default web build doesn't pay the ~570 MB Burn compile / fatter wasm: the
# whole local path (selector entry, OPFS download button, `start_local`
# session wiring) is already in `browser-app`, feature-gated on `local`; this
# composite just turns it on. Build the local bundle with
# `--no-default-features --features browser-app-local`.
browser-app-local = ["browser-app", "local"]

[dependencies]
# Burn: Rust-native deep-learning framework backing the `local` feature. The
# `wgpu` backend runs the model over WebGPU (wasm32) / native GPU. Inference
# only — no autodiff/dataset/training default features.
burn = { version = "0.21", optional = true, default-features = false, features = ["std", "wgpu"] }
# burn-store: the safetensors → Burn module loader. Pulled DIRECTLY (not via
# burn's `store` feature) with `default-features = false, features =
# ["safetensors"]` so the wasm build stays clean: burn-store's `std` feature
# unconditionally pulls `memmap2`, which does NOT compile on
# wasm32-unknown-unknown. We never enable `std` — `load_gemma` parses the
# in-memory `&[u8]` and drives `model.apply` directly (no std-gated key remapper).
burn-store = { version = "0.21", optional = true, default-features = false, features = ["safetensors"] }
# HuggingFace tokenizers for the Gemma `tokenizer.json`. `default-features =
# false` kills the C `onig` regex + C++ `esaxx_fast` + terminal `progressbar`;
# `unstable_wasm` swaps in pure-Rust `fancy-regex` and points getrandom at
# WebCrypto — the candle-wasm recipe. Same set on native (fancy-regex builds
# everywhere); inference never touches the training-only RNG. Pulls getrandom
# 0.3 (wasm_js) alongside the wallet's 0.2 and burn's 0.4 — the shared
# `.cargo/config.toml` getrandom_backend cfg covers it.
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["unstable_wasm"] }
# Burn drags in getrandom 0.4 (distinct from the 0.2 the wallet uses on wasm).
# On wasm32-unknown-unknown getrandom 0.4 needs the `wasm_js` backend feature
# turned on AND the `getrandom_backend` cfg (set in .cargo/config.toml). Pulled
# only by `local`, so default/anthropic/browser-app builds are untouched.
getrandom_v04 = { package = "getrandom", version = "0.4", features = ["wasm_js"], optional = true }
tokio = { version = "1.42", default-features = false, features = [
    "macros",
    "sync",
    "time",
    "rt",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
futures-core = "0.3"
thiserror = "1"
tracing = "0.1"
bytes = "1"
parking_lot = "0.12"
dunce = "1.0"
arc-swap = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
walkdir = { version = "2", optional = true }
globset = "0.4"
regex = "1"
tempfile = { version = "3", optional = true }
# AES-256-GCM for the at-rest OPFS encryption wrapper
# (`filesystem::EncryptedFilesystem`). RustCrypto pure-Rust AEAD: the ONLY
# cipher impl that runs identically on native (where the wrapper's unit
# tests live) and wasm32 (where it seals OPFS) — WebCrypto (app/encryption.rs)
# doesn't exist natively, so this is the strong-reason exception to "no new
# crypto deps". `getrandom` feature supplies OsRng for fresh GCM nonces;
# on wasm it unifies with the target-cfg getrandom/js below.
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc", "getrandom"] }
# UI-only; pulled in only when --features browser-app is set. Maud is a
# proc-macro that compiles HTML templates to string-builders — no runtime
# framework, no vdom. Compiles on every target; only used by src/app/.
maud = { version = "0.26", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
# Markdown rendering for assistant text in the browser app. No syntax
# highlighting, no html-on-the-wire: we hand pulldown-cmark a string,
# get HTML back, swap it into the segment via maud's PreEscaped.
pulldown-cmark = { version = "0.10", optional = true, default-features = false, features = ["html"] }
# QR code for the share surfaces (device-pairing deep link, publish share,
# `?invite=` invite links — see src/qr.rs). svg-only (NO `image`/`pic`
# default features) so it pulls ZERO transitive deps and stays wasm-clean —
# we render an inline SVG string and inject it via maud `PreEscaped`. UI-only;
# enabled solely by the browser-app feature (never in default native builds).
qrcode = { version = "0.14", optional = true, default-features = false, features = ["svg"] }
# In-browser wallet primitives (M6 spike).
# k256: secp256k1 keypair + sign. ecdsa + arithmetic features are
# the minimum for "generate, sign, verify" without dragging in
# elliptic-curve traits we don't use.
# sha3: keccak256 for Ethereum address derivation
#   (last 20 bytes of keccak256(uncompressed_pubkey[1..])).
# rand_core: trait used by k256's `random()`; wasm gets entropy via
# our existing getrandom/js feature.
k256 = { version = "0.13", optional = true, default-features = false, features = ["ecdsa", "arithmetic", "ecdh", "std"] }
sha3 = { version = "0.10", optional = true, default-features = false }
rand_core = { version = "0.6", optional = true, default-features = false, features = ["getrandom"] }
bip39 = { version = "2", optional = true, default-features = false, features = ["std", "rand"] }
# zeroize: wipe secret-derived material (private-key hex, BIP-39 entropy,
# the keccak digest) from memory on drop. The crate's own threat model is
# "same-origin memory is reachable after a compromise", so don't leave
# long-lived plaintext key copies in freed heap. Already in the tree via
# k256/elliptic-curve; pinned here as a direct dep so we can derive on our
# own types.
zeroize = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    # Used by OpfsFilesystem
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemRemoveOptions",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
    "Window",
    "WorkerGlobalScope",
    # Used by src/app/ (browser-app feature). Cheap to include
    # unconditionally — web-sys feature flags only affect symbol
    # visibility, not compiled code size.
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "VisualViewport",
    "DomTokenList",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlDetailsElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "DomRect",
    "Event",
    "EventTarget",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "KeyboardEvent",
    "InputEvent",
    "MessageEvent",
    # Worker — runs UNTRUSTED cartridge wasm OFF the main thread so a hung
    # frame() can't freeze the app; the main thread's watchdog terminates a
    # worker that stops posting frames (src/app/display.rs cartridge worker).
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "Blob",
    "BlobPropertyBag",
    "Url",
    # host_net: WebSocket-backed cartridge networking (src/rustlite/loader.rs
    # + src/app/display.rs). BinaryType selects arraybuffer framing.
    "WebSocket",
    "BinaryType",
    # host_audio: Web Audio (AudioContext) cartridge sound (src/app/display.rs
    # `mod audio`). Voice = oscillator/buffer-source -> gain -> master gain ->
    # destination. These gate the AudioContext methods + node/param types used.
    "AudioContext",
    "BaseAudioContext",
    "AudioNode",
    "AudioParam",
    "AudioDestinationNode",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioScheduledSourceNode",
    # WebRTC P2P transport for cross-device shared-folder sync (src/app/webrtc.rs).
    # Signaling rides the on-chain SignalingFacet; STUN for reflexive candidates;
    # non-trickle ICE folds candidates into ONE SDP per signaling blob.
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelType",
    "RtcDataChannelState",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcIceGatheringState",
    "RtcPeerConnectionIceEvent",
    # navigator.clipboard.writeText — the post-publish [copy] share button
    # (src/app/events/public_face.rs).
    "Clipboard",
    "History",
    "Location",
    "Storage",
    "HtmlIFrameElement",
    "NodeList",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "AesGcmParams",
    # Notifications + Web Push (src/app/notifications.rs): the agent's
    # `notify` tool (Notification / vibration) + the admin "enable
    # notifications" push-subscription flow (ServiceWorker registration ->
    # PushManager.subscribe under the VAPID applicationServerKey).
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionOptionsInit",
    "console",
] }

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "test-util"] }
serde_json = "1.0"
async-trait = "0.1"

# Live-only Tempo Moderato harness. Depends on the `wallet` feature
# (k256 + sha3 + registry/tempo_tx/wallet modules) and an `EVM_PRIVATE_KEY`
# env var. Gated so a default `cargo test` doesn't try to compile it
# without the feature wired up.
[[example]]
name = "tempo_tx_live"
required-features = ["wallet"]

# E2E: create a real agent subdomain on live Moderato via the sponsored
# registry path (the browser's create_subdomain). Writes to testnet.
[[example]]
name = "create_subagent_live"
required-features = ["wallet"]

# LIVE regression proof for the Gemini 3.x thoughtSignature 400: a real
# multi-round tool turn through the credit proxy (funded identity, no key).
[[example]]
name = "thought_signature_live"
required-features = ["wallet"]

# LIVE regression proof for the setPushSub per-byte gas fix: publishes a
# realistic ~365-byte Web Push subscription via the sponsored path and reads
# it back. Writes to Moderato testnet.
[[example]]
name = "push_sub_live"
required-features = ["wallet"]

# Probe: does a SPONSORED Tempo 0x76 CONTRACT-CREATION tx deploy on Moderato?
# The gating experiment for the SolidityLite facet-deploy stage — verifies the
# new TempoTxBuilder::create() empty-`to` path actually deploys on-chain.
[[example]]
name = "tempo_create_probe"
required-features = ["wallet"]

# SolidityLite Installment 0 — child-diamond genesis: deploy an agent-owned
# Diamond seeded with the prod Cut/Loupe/Ownership facets via sponsored CREATE.
[[example]]
name = "child_diamond_genesis"
required-features = ["wallet"]

# SolidityLite Installment 0 capstone: cut a real facet INTO an agent-owned
# child diamond and call it (deploy -> diamondCut -> loupe-verify -> call E2E).
# (Named without an "install" prefix to dodge Windows UAC installer-detection.)
[[example]]
name = "diamond_cut_e2e"
required-features = ["wallet"]

# SolidityLite Installment 1: deploy EMITTED bytecode (emit_constant_getter) and
# eth_call it — proves the assembler's output runs on the real Tempo EVM.
[[example]]
name = "soliditylite_getter_live"
required-features = ["wallet"]

# SolidityLite Installment 1: compile a stateful facet FROM SOURCE, deploy it,
# bump() twice, and confirm get()==2 — proves compiled SSTORE persists on-chain.
[[example]]
name = "soliditylite_facet_e2e"
required-features = ["wallet"]

# SolidityLite Installment 1: compile a Ledger facet (mappings + uint256/address
# params + msg.sender) FROM SOURCE, deploy, add() per-caller, read balanceOf().
[[example]]
name = "soliditylite_mapping_e2e"
required-features = ["wallet"]

# SolidityLite dynamic arrays: compile a Stack facet (uint256[] storage: push /
# xs[i] / xs.length) FROM SOURCE, deploy, push()/set()/get()/size() on-chain.
[[example]]
name = "soliditylite_array_e2e"
required-features = ["wallet"]

# SolidityLite Installment 1: compile the CounterFacet-core (mappings + require +
# comparison) FROM SOURCE, deploy, and prove incrementBy(101) reverts on-chain.
[[example]]
name = "soliditylite_counter_e2e"
required-features = ["wallet"]

# SolidityLite Installment 1 MVP: compile the FULL CounterFacet (with the
# Incremented event) FROM SOURCE, deploy, increment(), verify state + the LOG.
[[example]]
name = "soliditylite_counterfacet_e2e"
required-features = ["wallet"]

# SolidityLite Installment 1 CAPSTONE: write -> compile -> deploy -> genesis a
# child diamond -> cut -> call through the diamond, all with the compiled facet.
[[example]]
name = "soliditylite_mvp_capstone"
required-features = ["wallet"]

# Minimal getting-started example: one agent turn with a custom tool. Needs only
# the default `native` feature (tokio) + a GEMINI_API_KEY at runtime — no wallet,
# no chain. The smallest end-to-end use of the core agent loop.
[[example]]
name = "basic_agent"

# Offline, deterministic teaching examples. All three drive the always-available
# scripted `MockConnection` (Agent::start_mock) so they run with NO API key and
# NO network — `cargo run --example <name>` just works. They only need the
# default `native` feature (tokio); no required-features line needed.

# The smallest agent: build a mock, run a turn, print the scripted reply.
[[example]]
name = "minimal_agent"

# Register a `ClosureTool` and script the model to call it; the mock dispatches
# it inline through the real tool runner + policies, exactly like a live backend.
[[example]]
name = "agent_with_tool"

# Attach a real `PostToolCallHook` (observe) + a deny-by-default `Policy` (gate),
# and watch both fire against scripted tool calls.
[[example]]
name = "hooks_and_policies"

# Agent-onboarding CLI: `localharness create <name>` / `call` / `whoami`.
# The harness-agnostic, server-free way for any agent to join the network.
# Needs `wallet` (registry + tempo signing); native (default) supplies tokio.
[[bin]]
name = "localharness"
# native (tokio/reqwest) + wallet (registry/tempo signing). Both gate it
# OFF under the wasm/browser-app build, where a native CLI can't compile.
required-features = ["wallet", "native"]

# gen-docs: the DOC-INTEGRITY generator. Fills every `<!-- GEN:key -->` block in
# the managed docs (web/skill.md, web/llms.txt, README.md) from the single
# source of truth (`docs_manifest`). `--check` is the release pre-flight drift
# gate. Needs `wallet` because the manifest reads `registry::chain`.
[[bin]]
name = "gen-docs"
required-features = ["wallet"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# wasm-pack runs an old `wasm-opt` that rejects post-MVP features the
# current rustc target emits (bulk-memory, nontrapping-fptoint, …). The
# rustc-generated bundle is already well-optimised; skipping wasm-opt
# costs ~10-20% binary size in exchange for a build that doesn't depend
# on a moving toolchain target.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# docs.rs builds DEFAULT features unless told otherwise — which hid the
# entire feature-gated platform surface (wallet/registry + the Anthropic
# backend) from the published docs through 0.31.0. browser-app is
# wasm32-only chrome and `local` pulls the heavy Burn stack; neither adds
# documentable API on docs.rs's native builder, so neither is enabled.
[package.metadata.docs.rs]
features = ["wallet", "anthropic", "openai"]

# `cargo machete` flags deps with no source `use`. getrandom_v04 has none ON
# PURPOSE: it's the renamed getrandom-0.4 pulled (optional, `local` feature only)
# so Burn gets the `wasm_js` backend the `.cargo/config.toml getrandom_backend`
# cfg selects — a build/link-level dep, never referenced in source. Ignore it so
# the unused-dep check stays a meaningful gate (see scripts/audit-tech-debt.sh).
[package.metadata.cargo-machete]
ignored = ["getrandom_v04"]
