[package]
name = "localharness-web"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "Browser/wasm32 entry point for the localharness Gemini SDK. Drives a kitchen-sink web demo from a single index.html."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
localharness = { path = "..", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"
futures-util = { version = "0.3", default-features = false }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
